# minivmac_esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
case/: mac-modified.scad  mac.scad
components/minivmac_allarchs/: CMakeLists.txt  CNFGGLOB.h  CNFGRAPI.h  ENDIANAC.h  MINEM68K.c  SYSDEPNS.h
main/: CMakeLists.txt  ESP32API.c  ESP32API.h  MINIVMACESP32.c  OSGLUESP32.c  TCA9554PWR.c  TCA9554PWR.h  idf_component.yml
