idf_component_register(SRCS "SNDEMDEV.c"
			    "GLOBGLUE.c"
			    "IWMEMDEV.c"
			    "KBRDEMDV.c"
			    "MOUSEMDV.c"
			    "PROGMAIN.c"
			    "ROMEMDEV.c"
			    "SCRNEMDV.c"
			    "RTCEMDEV.c"
			    "MINEM68K.c"
			    "M68KITAB.c"
			    "SCSIEMDV.c"
			    "VIAEMDEV.c"
			    "SONYEMDV.c"
			    "SCCEMDEV.c"
                    INCLUDE_DIRS ".")
